Team2: Implement ProductDetails render, URL param, and Add-to-Cart

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
               <p class="product-card__price">$199.99</p>
             </a>
           </li>
-          <li class="product-card">
+          <!-- <li class="product-card">
             <a href="product_pages/northface-alpine-3.html">
               <img
                 src="images/tents/the-north-face-alpine-guide-tent-3-person-4-season-in-canary-yellow-high-rise-grey~p~985pr_01~320.jpg"
@@ -95,7 +95,7 @@
               <h2 class="card__name">Alpine Guide Tent - 3-Person, 4-Season</h2>
               <p class="product-card__price">$349.99</p>
             </a>
-          </li>
+          </li> -->
           <li class="product-card">
             <a href="product_pages/cedar-ridge-rimrock-2.html">
               <img
