--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sleep Outside | North Face Talus 4-person tent</title>
+    <title>Sleep Outside | Marmot Ajax 3 person tent</title>
 
     <link rel="stylesheet" href="../css/style.css" />
 
@@ -56,33 +56,34 @@
 
     <main class="divider">
       <section class="product-detail">
-        <h3>The North Face</h3>
+        <!-- BRAND -->
+        <h3 id="prod-brand"></h3>
 
-        <h2 class="divider">Talus Tent - 4-Person, 3-Season</h2>
+        <!-- FULL NAME -->
+        <h2 id="prod-name" class="divider"></h2>
 
-        <img
-          class="divider"
-          src="../images/tents/the-north-face-talus-tent-4-person-3-season-in-golden-oak-saffron-yellow~p~985rf_01~320.jpg"
-          alt="Talus Tent - 4-Person, 3-Season"
-        />
+        <!-- IMAGE -->
+        <img id="prod-image" class="divider" src="" alt="" />
 
-        <p class="product-card__price">$199.99</p>
+        <!-- PRICING -->
+        <p class="product-card__price" id="prod-price"></p>
 
-        <p class="product__color">Golden Oak/Saffron Yellow</p>
+        <!-- COLOR (first available) -->
+        <p class="product__color" id="prod-color"></p>
 
-        <p class="product__description">
-          Enjoy a fun night under stars with your favorite people in The North
-          Face&#39;s Talus four-person tent, featuring durable construction with
-          a roomy interior, an advanced DAC Featherlite NSL pole system and an
-          easy to pitch design.
-        </p>
+        <!-- DESCRIPTION HTML (insert as HTML) -->
+        <p class="product__description" id="prod-description"></p>
 
+        <!-- ADD TO CART -->
         <div class="product-detail__add">
-          <button id="addToCart" data-id="989CG">Add to Cart</button>
+          <button id="addToCart" data-id="">Add to Cart</button>
         </div>
       </section>
     </main>
 
-    <footer>&copy;NOT a real business</footer>
+    <footer>&copy; NOT a real business</footer>
+
+    <!-- Single module script loading everything -->
+    <script type="module" src="../js/main.js"></script>
   </body>
 </html>
