feat: dynamic product list on home page

--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,9 @@
 
       <section class="products">
         <h2>Top Products</h2>
-        <ul class="product-list">
-          <li class="product-card">
+
+        <ul class="product-list" id="product-list">
+          <!-- <li class="product-card">
             <a href="product_pages/marmot-ajax-3.html">
               <img
                 src="images/tents/marmot-ajax-tent-3-person-3-season-in-pale-pumpkin-terracotta~p~880rr_01~320.jpg"
@@ -85,7 +86,7 @@
               <p class="product-card__price">$199.99</p>
             </a>
           </li>
-          <!-- <li class="product-card">
+           <li class="product-card">
             <a href="product_pages/northface-alpine-3.html">
               <img
                 src="images/tents/the-north-face-alpine-guide-tent-3-person-4-season-in-canary-yellow-high-rise-grey~p~985pr_01~320.jpg"
@@ -95,7 +96,7 @@
               <h2 class="card__name">Alpine Guide Tent - 3-Person, 4-Season</h2>
               <p class="product-card__price">$349.99</p>
             </a>
-          </li> -->
+          </li> 
           <li class="product-card">
             <a href="product_pages/cedar-ridge-rimrock-2.html">
               <img
@@ -106,7 +107,7 @@
               <h2 class="card__name">Rimrock Tent - 2-Person, 3-Season</h2>
               <p class="product-card__price">$69.99</p>
             </a>
-          </li>
+          </li> -->
         </ul>
       </section>
     </main>
@@ -114,5 +115,6 @@
       &copy;2025 ⛺ SleepOutside ⛺ WDD 330 ⛺ BYU-Idaho for BYU-Pathway
       Worldwide Online
     </footer>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
